<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GeekAlarm</string>
    <string name="mute">Mute</string>
    <string name="add">Add alarm</string>
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="server_error">Can\'t connect to server.</string>
    <string name="not_online">Internet is not available.</string>
    <string name="bad_file">Sorry. Can\'t play this file.</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Send email…</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="exit">Exit</string>
    <string name="custom">Custom</string>
    <string name="hide">Hide</string>
    <string name="settings">Settings</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="sunday">Su</string>
    <string name="monday">M</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">W</string>
    <string name="thursday">Th</string>
    <string name="friday">F</string>
    <string name="saturday">Sa</string>

    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="no_data">No Data</string>
	<color name="gray">#ffff0000</color>

    <string name="common">Common</string>
    <string name="tasks">Task levels</string>
    <string name="all">All</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="all_tasks">Set up all tasks</string>
    <string name="test">Test settings</string>
    <string name="test_summary">Launches tasks</string>
    <string name="initial_mute_time">Initial mute time</string>
    <string name="initial_mute_time_summary">Alarm will be silent during this time</string>
    <string name="mute_time_step">Mute time step</string>
    <string name="mute_time_step_summary">Every time you click on mute, mute time changes</string>
    <string name="mute_behaviour">Mute time behaviour</string>
    <string name="other">Others</string>
    <string name="number_of_attempts">Number of attempts</string>
    <string name="positive_balance">Positive balance</string>
    <string name="positive_balance_summary">NUMBER_OF_SOLVED - NUMBER_OF_FAILED to dismiss alarm</string>
    <string name="use_multi_alarms">Disable single alarm screen</string>
    <string name="use_multi_alarms_summary">Show multi alarm screen even if there is only 1 alarm</string>

    <string-array name="levels">
        <item>Disable</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="mute_behaviours">
        <item>Decrease</item>
        <item>Permanent</item>
        <item>Increase</item>
    </string-array>
</resources>
